Added Note images